# single_array

./: .gitignore  .gitmodules  BitVector.hpp  CMakeLists.txt  README.md  Rank_MSB.hpp  Rank_MSB_z.hpp  Rank_SAMC.hpp  Rank_Samc.hpp  Samc.hpp  Samc2.hpp  Samc3.hpp  SuccinctBitVector.hpp  class.hpp  main.cpp  rank_Samc.hpp  rank_failed.hpp  rank_make.hpp
0415_変更前/: 0415__main.cpp  class.hpp
corpus/: Japan_Postal_Code.txt  en.txt  ja.txt  test.txt  test_postal_code.txt
